--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+  "dependencies": {
+    "chai": "^4.2.0",
+    "install": "^0.13.0",
+    "mocha": "^6.2.2",
+    "npm": "^10.4.0"
   }
 }
